--- a/MiniTest/TrinhHuyHoang_Session03_MiniTest.html
+++ b/MiniTest/TrinhHuyHoang_Session03_MiniTest.html
@@ -50,16 +50,23 @@
     <img src="https://api.toploigiai.vn/storage/uploads/doc-hieu-hay-hoc-cach-dung-len-sau-vap-nga_1" alt="Không từ bỏ">
     <p>Bạn có thể tưởng tượng thất bại như những lần ngã, và thành công là việc đứng lên mạnh mẽ hơn.</p>
     <h2>Ví Dụ Cụ Thể</h2>
-    <p>Khi bạn làm một việc mới - ví dụ như kinh doanh, học kỹ năng, hoặc làm dự án - bạn có thể thất bại ban đầu. Nhưng qua mỗi lần sai, bạn học được điều mới và chuẩn bị tốt hơn cho bước tiếp theo.</p>
+    <p>Khi bạn làm một việc mới - ví dụ như kinh doanh, học kỹ năng, hoặc làm dự án - bạn có thể thất bại ban đầu. Nhưng
+        qua mỗi lần sai, bạn học được điều mới và chuẩn bị tốt hơn cho bước tiếp theo.</p>
     <h2>Những Bước Quan Trọng Để Vượt Qua Thất Bại</h2>
     <p>Để có thể biến thất bại thành bài học quý giá, bạn cần thực hiện một số bước sau: </p>
     <ol>
-        <li><ins>Chấp nhận thất bại</ins>: Đừng sợ hãi khi bạn thất bại. Hãy nhìn nhận đó là một phần tự nhiên của quá trình học hỏi và phát triển.</li>
-        <li><ins>Phân tích nguyên nhân</ins>: Sau khi thất bại, hãy dành thời gian để phân tích lý do vì sao bạn không thành công và học từ đó.</li>
-        <li><ins>Điều chỉnh kế hoạch</ins>: Thất bại cung cấp thông tin quý giá để bạn cải tiến và thử nghiệm lại kế hoạch của mình, từ đó tìm ra cách làm đúng.</li>
-        <li><ins>Tiếp tục kiên trì</ins>: Đừng bao giờ bỏ cuộc. Thất bại không phải là dấu chấm hết mà là cơ hội để bạn thử lại với sự kiên trì và nỗ lực hơn.</li>
+        <li><ins>Chấp nhận thất bại</ins>: Đừng sợ hãi khi bạn thất bại. Hãy nhìn nhận đó là một phần tự nhiên của quá
+            trình học hỏi và phát triển.</li>
+        <li><ins>Phân tích nguyên nhân</ins>: Sau khi thất bại, hãy dành thời gian để phân tích lý do vì sao bạn không
+            thành công và học từ đó.</li>
+        <li><ins>Điều chỉnh kế hoạch</ins>: Thất bại cung cấp thông tin quý giá để bạn cải tiến và thử nghiệm lại kế
+            hoạch của mình, từ đó tìm ra cách làm đúng.</li>
+        <li><ins>Tiếp tục kiên trì</ins>: Đừng bao giờ bỏ cuộc. Thất bại không phải là dấu chấm hết mà là cơ hội để bạn
+            thử lại với sự kiên trì và nỗ lực hơn.</li>
     </ol>
 </body>
 <hr width="100%">
-<footer>Bài viết này giúp bạn hiểu <mark>tại sao thất bại không phải xấu</mark>, mà là một phần thiết yếu để hướng tới thành công (Tài liệu tham khảo)</footer>
+<footer>Bài viết này giúp bạn hiểu <mark>tại sao thất bại không phải xấu</mark>, mà là một phần thiết yếu để hướng tới
+    thành công (Tài liệu tham khảo)</footer>
+
 </html>
