--- a/MiniTest/TrinhHuyHoang_Session03_MiniTest.html
+++ b/MiniTest/TrinhHuyHoang_Session03_MiniTest.html
@@ -67,6 +67,6 @@
 </body>
 <hr width="100%">
 <footer>Bài viết này giúp bạn hiểu <mark>tại sao thất bại không phải xấu</mark>, mà là một phần thiết yếu để hướng tới
-    thành công (Tài liệu tham khảo)</footer>
+    thành công  <a href="">(Tài liệu tham khảo)</a></footer>
 
 </html>
